--- a/pages/templates/pages/signup_result.html
+++ b/pages/templates/pages/signup_result.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="{% static 'stylesheets/signup.css' %}">
+  <link rel="stylesheet" href="{% static 'pages/stylesheets/signup.css' %}">
 </head>
 <body>
   <h1>{{ result }}</h1>
-  <img src="{% static 'images/163788.jpg' %}" alt="배경" width="500px" height="700px">
+  <img src="{% static 'pages/images/163788.jpg' %}" alt="배경" width="500px" height="700px">
 </body>
 </html>
