--- a/first_django/templates/base.html
+++ b/first_django/templates/base.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Django services</title>
+  {% block css %} {% endblock %}
 </head>
 <body>
-  <h1>{{ data }}</h1>
-  <a href="/pages/ping/">입력하기</a>
+  {% block body %}
+  {% endblock %}
 </body>
 </html>
