--- a/pages/templates/pages/ping.html
+++ b/pages/templates/pages/ping.html
@@ -11,7 +11,7 @@
     form
     action : 요처을 어디로 보낼지 설정
   -->
-  <form action="/pong/">
+  <form action="/pages/pong/">
     <label for="userdata">내용: </label>
     <!-- name: 사용자 입력값을 어떠한 변수명으로 담아서 보낼지 -->
     <input id="userdata" type="text" name="data">
